# InfiniLM-SVC

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  API_DOCUMENTATION_CN.md  BUILD.md  DISTRIBUTED_DEPLOYMENT_README.md  Dockerfile.example  PHASE0_FILE_STRUCTURE.md  QUICKSTART.md  README.md  RUST_REFACTORING_PROPOSAL.md  TROUBLESHOOTING.md  deploy_services.sh  distributed_router.py  docker_entrypoint.sh  enhanced_babysitter.py  example_deployment.sh  generate_nginx_config.py  launch_all.sh  launch_babysitter.sh  launch_babysitter_9g8b.sh  launch_babysitter_qwen.sh  launch_babysitter_qwen_rust.sh  launch_registry.sh  launch_router.sh  register_service.py  render_service_config.py  requirements.txt  service_registry.py  stop_all.sh  stop_babysitter.sh  stop_registry.sh  stop_router.sh  test_max_concurrency.py  test_service.py  test_timeout_recovery.py  validate_integration.py
rust/: BABYSITTER_REFACTOR_SUMMARY.md  Cargo.toml  PHASE2_SUMMARY.md  PHASE2_TEST_RESULTS.md  PHASE3_SUMMARY.md  PHASE3_TEST_RESULTS.md  PROXY_TEST_RESULTS.md  REFACTORING_STATUS.md  RUST_REGISTRY_REFACTOR.md  TEST_RESULTS.md  test_phase2.sh  test_phase3.sh  test_proxy.sh
rust/src/: config.rs  lib.rs  main.rs
rust/src/babysitter/: config_file.rs  handlers.rs  mod.rs  process_manager.rs  registry_client.rs
rust/src/handlers/: health.rs  mod.rs  models.rs  services.rs  stats.rs
rust/src/models/: aggregator.rs  mod.rs
rust/src/proxy/: handler.rs  mod.rs  model_extractor.rs  session_extractor.rs  streaming.rs
rust/src/registry/: client.rs  mod.rs
rust/src/router/: health_checker.rs  mod.rs  (+2 more)
(+187 files in other folders)
